--- a/Readme
+++ b/Readme
@@ -1,3 +1,1 @@
-An indoor real scene stereo dataset. 
-It contains thousands of pairs of images with high accuracy disparity maps. 
-We hope it can improve the the generalization performance of networks
+This is an indoor real scene stereo dataset. It contains thousands of pairs of images with high accuracy disparity maps. We hope it can improve the the generalization performance of deep stereo matching networks.
